Fix/2817 [tag-list] fix flickering of elements inside when zooming (#3112)

--- a/packages/components/combobox/src/combobox.scss
+++ b/packages/components/combobox/src/combobox.scss
@@ -1,5 +1,10 @@
 :host {
+  // Prevent selected tags from increasing the host's intrinsic inline size in unconstrained containers (e.g. Storybook mobile canvas).
+  contain: inline-size;
   display: flex;
+  inline-size: 100%;
+  max-inline-size: 100%;
+  min-inline-size: 0;
   vertical-align: middle;
 }
 
@@ -22,7 +27,10 @@
 
 sl-text-field {
   flex: 1;
+  inline-size: 100%;
   max-inline-size: 100%;
+  min-inline-size: 0;
+  overflow: hidden;
 
   &:has(> sl-tag-list) {
     padding-inline: calc(var(--sl-size-075) - var(--sl-size-borderWidth-default)) 0;
@@ -38,7 +46,11 @@ sl-text-field {
 }
 
 sl-tag-list {
+  flex: 1 1 auto;
   max-inline-size: 66%;
+  min-inline-size: 0;
+  position: relative;
+  z-index: 1;
 }
 
 sl-tag {
